[CSS] Fix overlapping issue

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -2818,3 +2818,7 @@ select.form-control option {
 #analyticsDescriptor {
     margin-bottom:27px;
 }
+
+#foot {
+    z-index: 200;
+}
